--- a/roblokis/js/Theme/styles/serversCard.css
+++ b/roblokis/js/Theme/styles/serversCard.css
@@ -103,3 +103,8 @@
 	width: 34px;
 	height: 34px;
 }
+
+/* no players style */
+.servers-no-players #game-instances ul.card-list li .player-thumbnails-container {
+	display: none;
+}
