added new option for top navbar float style option to make the search a button
centered and made the navbar higher

--- a/roblokis/js/Theme/DefaultTamplate.css
+++ b/roblokis/js/Theme/DefaultTamplate.css
@@ -73,6 +73,12 @@
 	--rk-icon-r-background-image-size: $iconr.background.image.size#;
 
 
+/*  Menu	*/
+
+	--rk-menu-corner-radius: $menu.corners.all.radius#;
+
+
+
 /*  Content	 */
 
 	--rk-content-box-shadow: $content.shadow#black 0px 0px 8px 2px;
