--- a/roblokis/js/Theme/styles/menuFloat.css
+++ b/roblokis/js/Theme/styles/menuFloat.css
@@ -38,7 +38,7 @@
 }
 
 .rbx-left-col .rbx-scrollbar li.rbx-upgrade-now .btn-secondary-md {
-	border-radius: calc(var(--rk-menu-corners-radius, 20px) / 2);
+	border-radius: calc(var(--rk-menu-corner-radius, 20px) / 2);
 }
 
 .rbx-left-col .rbx-scrollbar li.rbx-upgrade-now:last-child {
