--- a/roblokis/js/Theme/Pages/games.css
+++ b/roblokis/js/Theme/Pages/games.css
@@ -467,3 +467,10 @@ html:not([data-btr-loaded="true"]) #rbx-private-running-games > ul > li > div.ca
 #rkpagenav > *, #rkpagenav > * > * {
 	color: var(--rk-pagenav-color);
 }
+
+
+
+/* no players style */
+.servers-no-players #game-instances ul.card-list li .player-thumbnails-container {
+	display: none;
+}
