--- a/roblokis/html/SettingsPage/SettingsPage.css
+++ b/roblokis/html/SettingsPage/SettingsPage.css
@@ -116,7 +116,7 @@ span.rk-button {
 	-ms-user-select: none;
 	user-select: none;
 }
-.rk-popup:not(:has(> .rk-popup-navbar)) {
+.rk-popup:not(.rk-has-navbar) {
 	padding: 1rem 2rem 1.5rem;
 }
 .rk-popup-navbar {
@@ -130,11 +130,11 @@ span.rk-button {
 .rk-popup-navbar >.rk-gap {
 	flex-grow: 1;
 }
-.rk-popup:has(> .rk-popup-navbar) .rk-popup-content {
+.rk-popup.rk-has-navbar .rk-popup-content {
 	width: 100%;
 	height: 100%;
 }
-.rk-popup:has(> .rk-popup-navbar) > * {
+.rk-popup.rk-has-navbar > * {
 	padding: 1rem;
 }
 
@@ -368,9 +368,8 @@ span.rk-button {
 	display: none;
 }
 
-[data-nav-tab] *:has(> [code="setupsize"]) {
-	width: 100%;
-	height: clamp(10rem, 100%, 30rem);
+.section-content[data-designer-func="add-edits-btn"] {
+	margin: 0 0 18px;
 }
 
 .component-holder {
