--- a/roblokis/js/Theme/styles/menuRod.css
+++ b/roblokis/js/Theme/styles/menuRod.css
@@ -37,12 +37,22 @@ body.extended-menu-rod #navigation {
 	height: 100%;
 	max-height: -webkit-fill-available;
 }
-body.extended-menu-rod #navigation div.simplebar-wrapper div.simplebar-content {
+body.extended-menu-rod.center-menu-list #navigation div.simplebar-wrapper div.simplebar-content {
 	height: 100%;
 }
-body.extended-menu-rod .rbx-left-col .rbx-scrollbar .left-col-list {
+body.extended-menu-rod.center-menu-list .rbx-left-col .rbx-scrollbar .left-col-list {
 	height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+}
+
+/* move avatar to bottom */
+body.menu-avatar-bottom #navigation,
+body.menu-avatar-bottom .rbx-left-col > ul {
+	display: flex;
+	flex-direction: column-reverse;
+}
+body.menu-avatar-bottom #navigation {
+	justify-content: space-between;
 }
