--- a/roblokis/js/Theme/Pages/games.css
+++ b/roblokis/js/Theme/Pages/games.css
@@ -65,6 +65,9 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
+.game-main-content.follow-button-enabled .favorite-follow-vote-share .game-follow-button-container .follow-button {
+	width: auto;
+}
 
 
 /*section tabs*/
