--- a/roblokis/js/Theme/Pages/home.css
+++ b/roblokis/js/Theme/Pages/home.css
@@ -4,7 +4,7 @@
 	transition-timing-function: cubic-bezier(0.21, 1.46, 0.99, 0.99);
 }
 #home-header a.avatar:hover {transform: var(--rk-basic-animations, scale(1.2));}
-body#rbx-body .avatar .avatar-card-image {background-color: transparent;}
+/* body#rbx-body .avatar .avatar-card-image {background-color: transparent;} */
 
 #home-header div.user-info-container > h1 > a {
 	transition: all 400ms;
@@ -12,7 +12,7 @@ body#rbx-body .avatar .avatar-card-image {background-color: transparent;}
 }
 #home-header div.user-info-container > h1 > a:hover {transform: var(--rk-basic-animations, translate(24%, 0px) scale(1.5));}
 
-div.section-content.people-list div.avatar * {background: none;}
+/* div.section-content.people-list div.avatar * {background: none;} */
 
 div.section-content.people-list li.list-item.friend div.avatar,
 div.section-content.people-list li.list-item.friend span.avatar-status {
