--- a/data/experiments/buttonMenuStyle.css
+++ b/data/experiments/buttonMenuStyle.css
@@ -1,4 +1,6 @@
 #navigation {
+	height: auto;
+	overflow: visible;
 	background: transparent;
     backdrop-filter: none;
     box-shadow: none;
@@ -7,6 +9,9 @@
 	display: none;
 }
 
+#navigation .simplebar-mask {
+	overflow: visible;
+}
 .rbx-left-col .rbx-scrollbar .left-col-list {
 	padding-top: 0;
 }
@@ -19,8 +24,13 @@
     border-width: var(--rk-menu-borders-size);
     backdrop-filter: var(--rk-menu-backdrop-filter);
     box-shadow: var(--rk-menu-box-shadow);
+	overflow: hidden;
     padding: 4px;
 }
 .rbx-left-col li .dynamic-width-item.align-right {
 	margin-right: 2px;
+}
+
+.rbx-upgrade-now {
+	display: none;
 }
